name:                ipli-hs
version:             0.1-alpha
-- synopsis:
-- description:
homepage:            https://github.com/k3ntaroo/ipli-hs
license:             BSD3
license-file:        LICENSE
author:              Kentaro Takakuwa
maintainer:          kentaro.tkkw@gmail.com
copyright:           Copyright: (c) 2017, Kentaro Takakuwa
category:            Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib.Parser
                     , Lib.Combinator
                     , Lib.StringParser
                     , Prolog
                     , Prolog.Token
                     , Prolog.Tokenizer
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , text >= 1.2.2.1
                     , containers >= 0.5.7.1
                     , transformers
  default-language:    Haskell2010

executable ipli-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ipli-hs
  default-language:    Haskell2010

test-suite ipli-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     Prolog.TokenSpec
                     , Prolog.TokenizerSpec
  build-depends:       base
                     , ipli-hs
                     , hspec >= 2.4.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/k3ntaroo/ipli-hs
